# cpp-template

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json  install_gtest.sh
src/: main.cpp  main.h  test_main.cpp
